# BestProjectloT

./: LICENSE  README.md
MapView/: datasource.py  lineMapLayer.py  main.py  pyproject.toml
MapView/docker/: docker-compose.yml
MapView/docker/mosquitto/data/: mosquitto.db
agent/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
agent/docker/: docker-compose.yaml
agent/docker/mosquitto/data/: mosquitto.db
agent/src/agent/: config.py  file_datasource.py  main.py
agent/src/agent/domain/: aggregated_data.py
agent/src/agent/schema/: aggregated_data_schema.py
hub/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
hub/app/adapters/: store_api_adapter.py
hub/app/entities/: agent_data.py
hub/docker/: docker-compose.yaml
hub/docker/mosquitto/data/: mosquitto.db
hub/tests/: test_agent_mqtt_adapter.py  test_store_api_adapter.py
iot/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
iot/app/adapters/: MQTTAgentGateway.py  SQLiteHubGateway.py  agent_mqtt_adapter.py  hub_mqtt_adapter.py
iot/app/entities/: agent_data.py
iot/app/usecases/: data_processing.py
iot/docker/mosquitto/data/: mosquitto.db
store/: Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
store/docker/: docker-compose.yml
store/src/store/: alembic.ini  main.py
store/src/store/agent/: models.py  repository.py  routes.py  schemas.py  service.py
store/src/store/database/: config.py  core.py
store/src/store/database/alembic/: env.py
store/src/store/database/alembic/versions/: 7049877544b5_first_commit.py  f577177f6ce4_added_account_table.py
store/src/store/ws/: core.py  routes.py
