[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
annotated-types = "^0.7.0"
certifi = "^2025.1.31"
charset-normalizer = "^3.4.1"
idna = "^3.10"
kivy-garden = "^0.1.5"
kivy-garden-mapview = "^1.0.6"
pydantic = "^2.10.6"
pygments = "^2.19.1"
requests = "^2.32.3"
typing-extensions = "^4.12.2"
docutils = "^0.21.2"
kivy = "^2.3.1"
urllib3 = "^2.3.0"
websockets = "^15.0.1"
