[project]
name = "hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "idna (>=3.10,<4.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.32.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
